【新增】优化版本cache2模块